@@ -1,0 +1,24 @@
+import esccmd
+import escio
+from esclog import LogDebug
+from escutil import AssertCharHasSGR
+from esctypes import Point
+
+class SGRTests(object):
+  def test_SGR_Bold(self):
+    """Tests bold."""
+    escio.Write("x")
+    esccmd.SGR(esccmd.SGR_BOLD)
+    escio.Write("y")
+    AssertCharHasSGR(
+	Point(1, 1),
+	[esccmd.SGR_FG_DEFAULT,
+	 esccmd.SGR_BG_DEFAULT],
+	[esccmd.SGR_BOLD])
+    AssertCharHasSGR(
+	Point(2, 1),
+	[esccmd.SGR_FG_DEFAULT,
+	 esccmd.SGR_BG_DEFAULT,
+	 esccmd.SGR_BOLD])
+
+# TODO: Write a lot more tests :)
