@@ -1,3 +1,8 @@
+2018-08-21  George.Nachman
+
+	* tests/sgr.py:
+	Add support for XTREPORTSGR and add an example SGR test to a new sgr.py.
+
 2018-08-15  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* tests/rep.py, tests/dch.py, tests/save_restore_cursor.py, tests/decstbm.py, tests/decscl.py, tests/nel.py, tests/sm.py, tests/vt.py, tests/sd.py, tests/vpr.py, tests/el.py, tests/dl.py, tests/ich.py, tests/il.py, tests/ind.py, tests/decic.py, tests/ed.py, tests/decfi.py, tests/hpr.py, tests/ris.py, tests/dcs.py, tests/decsel.py, tests/lf.py, esc.py, tests/decsed.py, tests/decdc.py, tests/ri.py, tests/sos.py, tests/decstr.py, tests/ff.py, tests/su.py, tests/decset.py, tests/pm.py, tests/apc.py:
